2009-08-02  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tclUnixFCmd.c (GetOwnerAttribute, SetOwnerAttribute)
	(GetGroupAttribute, SetGroupAttribute): [Bug 1942222]: Stop calling
	* unix/tclUnixFile.c (TclpGetUserHome): endpwent() and endgrent();
	they've been unnecessary for ages.

2009-07-31  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c:       [Bug 2830354]: Corrected failure to
	* tests/format.test:            grow buffer when format spec request
	large width floating point values.  Thanks to Clemens Misch.

2009-07-24  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (Tcl_GetChannelHandle): [Bug 2826248]: Do not crash
	* generic/tclPipe.c (FileForRedirect): for getHandleProc == NULL, this
	is allowed. Provide a nice error message in the bypass area. Updated
	caller to check the bypass for a mesage. Bug reported by Andy
	Sonnenburg <andy22286@users.sourceforge.net>. Backported from CVS
	head.

2009-07-23  Joe Mistachkin  <joe@mistachkin.com>

	* generic/tclNotify.c: [Bug 2820349]: Ensure that queued events are
	freed once processed.

2009-07-21  Kevin B. Kenny  <kennykb@acm.org>

	* library/tzdata/Asia/Dhaka: 
	* library/tzdata/Indian/Mauritius: Olson's tzdata2009k.
	
2009-07-20  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclCmdMZ.c (StringIsCmd): Reorganize so that [string is] is
	more efficient when parsing things that are correct, at a cost of
	making the empty string test slightly more costly. With this, the cost
	of doing [string is integer -strict $x] matches [catch {expr {$x+0}}]
	in the successful case, and greatly outstrips it in the failing case.

2009-07-16  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCmdIL.c:	Removed unused variables.
	* generic/tclCompile.c:
	* generic/tclVar.c:
	* unix/tclUnixChan.c:

	* generic/tclScan.c:	Typo in ACCEPT_NAN configuration.

	* generic/tclStrToD.c:	[Bug 2819200]: Set floating point control
	register on MIPS systems so that the gradual underflow expected by Tcl